[package]
name = "exchange"
version = "0.1.0"
authors = ["Maciej Dziardziel <fiedzia@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.21"
chrono = "0.4.19"
reqwest = {version="0.11.1", features=["blocking", "json"]}
json = "0.12.4"
serde_json = "1.0.64"
